syntax = "proto3";

package Inventory;

option java_multiple_files = true;
option java_package = "com.chocolatada.inventory.grpc";
option java_outer_classname = "UtilProto";

message Item {
  int64 inventory_item_id = 1;
  string name = 2;
  string description = 3;
  int64 gold = 4;
  int64 required_level = 5;
  ItemType type = 6;
  SlotType slot = 7;
  int64 hp_bonus = 8;
  int64 atk_bonus = 9;
  int64 def_bonus = 10;
  int64 stamina_bonus = 11;
  int64 accuracy_bonus = 12;
  int64 evasion_bonus = 13;
  float crit_rate_bonus = 14;
  float crit_damage_bonus = 15;
  bool equipped = 16;
}

enum ItemType {
  WEAPON = 0;
  ARMOR = 1;
}

enum SlotType {
  HEAD = 0;
  CHEST = 1;
  LEGS = 2;
  FEET = 3;
  HANDS = 4;
  MAIN_HAND = 5;
  OFF_HAND = 6;
  RING = 7;
  NECKLACE = 8;
  NONE = 9;
}
